[gd_scene load_steps=5 format=3 uid="uid://d8mx0onmxk4s"]

[ext_resource type="Script" uid="uid://bfutogcebcw16" path="res://escenas/Administrador/inicial.gd" id="1_gvp2n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7658b"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvp2n"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxwe7"]
bg_color = Color(0.147575, 0.0936971, 0.221111, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Inicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvp2n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.152941, 0.329412, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.226
anchor_right = 1.0
anchor_bottom = 0.277
offset_top = -0.280029
offset_right = -7.0
offset_bottom = -0.559998
theme_override_font_sizes/font_size = 20
text = "Nombre administrador"
horizontal_alignment = 1
vertical_alignment = 1

[node name="leccion" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.353
anchor_right = 0.897
anchor_bottom = 0.42
offset_left = -12.8
offset_top = 0.159973
offset_right = 0.159973
offset_bottom = 0.399963
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7658b")
text = "Agregar lecci√≥n"

[node name="preguntas" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.307
anchor_right = 0.904
anchor_bottom = 0.374
offset_left = -12.8
offset_top = 188.04
offset_right = -4.88
offset_bottom = 188.28
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_gvp2n")
text = "Agregar preguntas"

[node name="logros" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.416
anchor_right = 0.904
anchor_bottom = 0.484
offset_left = -12.8
offset_top = 188.52
offset_right = -4.88
offset_bottom = 187.48
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_xxwe7")
text = "Agregar logros"

[connection signal="pressed" from="leccion" to="." method="_on_leccion_pressed"]
[connection signal="pressed" from="preguntas" to="." method="_on_preguntas_pressed"]
[connection signal="pressed" from="logros" to="." method="_on_logros_pressed"]
